Database logins working | Emailing Working |Contractor.html jsut starting

--- a/contact.html
+++ b/contact.html
@@ -257,15 +257,15 @@
         </section>
 
         <section class="founder-column">
-            <span class="section-tag">DIRECTORATE_PROFILE</span>
+            <span class="section-tag">CEO</span>
             
             <div class="founder-frame">
-                <img src="founder.jpg" alt="Founder Portrait">
+                <img src="me.jpg" alt="Founder Portrait">
             </div>
 
             <div class="bio-header">
                 <span>CHIEF OPERATIONAL OFFICER</span>
-                <h2>[Your Name Here]</h2>
+                <h2>Jay Krishan, B.A., B.Tech.</h2>
             </div>
 
             <div class="bio-text">
