--- a/index.html
+++ b/index.html
@@ -1,3 +1,66 @@
+<div id="maintenance-mode" style="position:fixed; top:0; left:0; width:100%; height:100%; background:#f8fafc; z-index:999999; display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center; font-family:'JetBrains Mono';">
+    <div class="logo" style="font-size: 2rem; margin-bottom: 20px; font-weight: 800; color: #0f172a;">DRONE<span style="color: #1e40af;">MARK</span></div>
+    
+    <div style="border-left: 3px solid #1e40af; padding-left: 20px; margin-bottom: 30px;">
+        <h2 style="font-weight: 800; letter-spacing: -1px; color: #0f172a;">SYSTEM_OFFLINE</h2>
+        <p style="color: #94a3b8; font-size: 0.8rem; margin-top: 10px;">
+            SECURE PORTAL UNDERGOING CALIBRATION.<br>
+            ESTIMATED COMPLETION: Q1 2026
+        </p>
+    </div>
+
+    <div style="display: flex; flex-direction: column; gap: 10px; width: 250px;">
+        <input type="password" id="dev-access-code" placeholder="ENTER_ACCESS_CODE" 
+               style="background: #ffffff; border: 1px solid #e2e8f0; padding: 10px; font-family: 'JetBrains Mono'; font-size: 10px; text-align: center; outline: none; color: #0f172a;">
+        <button onclick="checkAccess()" 
+                style="background: #0f172a; color: white; border: none; padding: 10px; font-family: 'JetBrains Mono'; font-size: 10px; cursor: pointer; font-weight: 700;">
+            VERIFY_IDENTITY
+        </button>
+        <p id="access-error" style="color: #ef4444; font-size: 9px; height: 10px; margin-top: 5px;"></p>
+    </div>
+
+    <p style="margin-top: 40px; font-size: 0.6rem; color: #1e40af; letter-spacing: 1px;">STATUS: ENCRYPTED_DEVELOPMENT_MODE</p>
+</div>
+
+<script>
+    // Set your desired password here
+    const ACCESS_KEY = "DM2026"; 
+
+    function checkAccess() {
+        const input = document.getElementById('dev-access-code').value;
+        const overlay = document.getElementById('maintenance-mode');
+        const errorMsg = document.getElementById('access-error');
+
+        if (input === ACCESS_KEY) {
+            overlay.style.opacity = '0';
+            setTimeout(() => {
+                overlay.style.display = 'none';
+            }, 500);
+            // Save access in session so it stays unlocked while browsing
+            sessionStorage.setItem('dm_access_granted', 'true');
+        } else {
+            errorMsg.innerText = "ACCESS_DENIED: INVALID_CREDENTIALS";
+            document.getElementById('dev-access-code').value = '';
+        }
+    }
+
+    // Check if previously unlocked in this session
+    window.addEventListener('load', () => {
+        if (sessionStorage.getItem('dm_access_granted') === 'true') {
+            document.getElementById('maintenance-mode').style.display = 'none';
+        }
+    });
+
+    // Allow "Enter" key to submit
+    document.getElementById('dev-access-code')?.addEventListener('keypress', function (e) {
+        if (e.key === 'Enter') checkAccess();
+    });
+</script>
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
